3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Improve newpickup command: add new flag PU_NOT_CURSED to ignore cursed items.
--
include/define.h: Add flag #define.
server/c_object.c: Add "notcursed" option to pickup command.
server/player.c: Respect new flag in check_pickup().
Andreas Kirschbaum 2005-11-01

plugins/cfanim/cfanim.c: remove printf for properties. Export functions for DLL
 for Win32.
plugins/cfanim/cfanim.h: remove obsolete definitions (see plugin_common.h).
plugins/cfanim/cfanim_proto.h: fix definition for exported functions.
plugins/common/plugin_common.c: add gettimeofday for Win32.
plugins/common/include/plugin_common.h: add gettimeofday for Win32.
Ryo 2005-11-01

server/plugins.c: Print error message for event_xxx objects with missing or
   invalid parameters. Also remove the affected object to prevent multiple
   error messages.
Andreas Kirschbaum 2005-11-01

Add new function object_get_env_recursive() to find the outermost environment
object for a given object.
--
common/object.c, include/libproto.h: Add function.
server/{rune.c,spell_attack.c}: Use function where appropriate.
Andreas Kirschbaum 2005-11-01

General cleanup of weather code.
--
server/weather: Declare many functions and variables as "static", add
   prototypes for affected functions. Declare some variables as "const".
include/sproto.h: Remove prototypes for now static functions.
include/tod.h: Add "const" to strings.
Andreas Kirschbaum 2005-11-01

Fix bug #1102975 (Bronze items not keeping their + in alchemy): the problem
was that a formula for full_helmet did exist but not for b_full_helmet. Since
both helmet's names are "full helmet", the recipe was selected even if using